--- a/src/styles/quiz.scss
+++ b/src/styles/quiz.scss
@@ -239,6 +239,7 @@
 			height: 100%;
 			width: 100%;
 			z-index: 10;
+			box-shadow: none;
 		}
 
 		& > button {
